k8s/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scalable-app
  namespace: test
  labels: { app: scalable-app }
spec:
  replicas: 2
  selector: { matchLabels: { app: scalable-app } }
  template:
    metadata: { labels: { app: scalable-app } }
    spec:
      containers:
      - name: scalable-app
        image: docker.io/DOCKERHUB_USER/distributed-systems-project:DEV_TAG
        imagePullPolicy: Always
        ports: [{ containerPort: 5000 }]
        readinessProbe:
          httpGet: { path: "/", port: 5000 }
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet: { path: "/", port: 5000 }
          initialDelaySeconds: 5
          periodSeconds: 10
