k8s/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scalable-app-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: scalable-test.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scalable-app-service
            port:
              number: 80
