k8s/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scalable-app-service
  namespace: test
spec:
  selector:
    app: scalable-app
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
